# ai4os-federated-server

./: .gitignore  .stestr.conf  Dockerfile  JenkinsConstants.groovy  Jenkinsfile  LICENSE  README.md  ai4-metadata.yml  metadata.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.sqa/: config.yml  docker-compose.yml
fedserver/: fedavgopt.py  server.py
fedserver/client_samples/: keras_client.py
fedserver/examples/client_mnist/: client_mnist.py
fedserver/tests/: test_api.py
tests/: test_api.py
