[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fedserver"
authors = [{ name = "Judith Sáinz-Pardo", email = "sainzpardo@ifca.unican.es" }]
description = "Federated learning server with flower"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache 2.0" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os/ai4os-federeated-server"
"Bug Tracker" = "https://github.com/ai4os/ai4os-federated-server/issues"

# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = ["fedserver"]

[tool.setuptools.package-dir]
"fedserver" = "fedserver"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }
