# -*- coding: utf-8 -*-
[metadata]
name = fedserver
summary = Federated learning server with flower
description-file =
    README.md
author = Judith Sáinz-Pardo 
author-email = sainzpardo@ifca.unican.es
version = 0.0.1
license = Apache 2.0
home-page = https://github.com/deephdc/fedserver
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[files]
packages =
    fedserver

